--- a/NeumorphicKitExamples/ViewControllers/ViewController.xib
+++ b/NeumorphicKitExamples/ViewControllers/ViewController.xib
@@ -8,7 +8,12 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ViewController" customModule="NeumorphicKitExamples" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ViewController" customModule="NeumorphicKitExamples" customModuleProvider="target">
+            <connections>
+                <outlet property="tableView" destination="IUT-Xu-ySy" id="h59-L1-e0u"/>
+                <outlet property="view" destination="Sj3-6u-oOI" id="lcl-Or-IpG"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="Sj3-6u-oOI">
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
