--- a/NeumorphicKitExamples/ViewControllers/ButtonsViewController.xib
+++ b/NeumorphicKitExamples/ViewControllers/ButtonsViewController.xib
@@ -16,6 +16,9 @@
                 <outlet property="dotView" destination="fAy-vm-bRd" id="hIw-VS-peg"/>
                 <outlet property="elevatedFlatButton" destination="cad-LB-QhR" id="9Op-Ly-M8v"/>
                 <outlet property="elevatedFlatLabel" destination="Dxl-7f-wA3" id="C2X-BG-S3t"/>
+                <outlet property="elevatedFlatRoundButton" destination="PUc-dN-Phw" id="EEw-5l-JvP"/>
+                <outlet property="elevatedFlatRoundLabel" destination="cDR-JN-eU1" id="kMo-L9-s1V"/>
+                <outlet property="elevatedFlatRoundView" destination="YOL-st-eQa" id="lBQ-JG-ZjB"/>
                 <outlet property="elevatedFlatView" destination="cCA-R6-dcZ" id="uPz-XH-7z0"/>
                 <outlet property="elevatedSoftButton" destination="duF-bZ-X5g" id="Frf-Nl-mx6"/>
                 <outlet property="elevatedSoftLabel" destination="D9P-bL-nf3" id="TmI-xB-VCi"/>
@@ -31,14 +34,14 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="Ukb-cI-Vc4">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="700"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="840"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sJe-kM-D3a">
-                    <rect key="frame" x="0.0" y="44" width="414" height="656"/>
+                    <rect key="frame" x="0.0" y="44" width="414" height="796"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="61L-g5-uCP">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="531"/>
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="785"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GyX-7g-GR4">
                                     <rect key="frame" x="0.0" y="40" width="414" height="40"/>
@@ -196,6 +199,43 @@
                                         <constraint firstItem="cCA-R6-dcZ" firstAttribute="leading" secondItem="Dxl-7f-wA3" secondAttribute="leading" id="sri-9F-65c"/>
                                     </constraints>
                                 </view>
+                                <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yyJ-Ll-YBn">
+                                    <rect key="frame" x="40" y="566" width="334" height="219"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cDR-JN-eU1">
+                                            <rect key="frame" x="146.5" y="0.0" width="41.5" height="20.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YOL-st-eQa">
+                                            <rect key="frame" x="146.5" y="28.5" width="41.5" height="0.5"/>
+                                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="0.5" id="UXY-tW-a8Z"/>
+                                            </constraints>
+                                        </view>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PUc-dN-Phw">
+                                            <rect key="frame" x="107" y="64" width="120" height="120"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="PUc-dN-Phw" secondAttribute="height" multiplier="1:1" id="AQN-3g-mQQ"/>
+                                                <constraint firstAttribute="width" constant="120" id="IoB-We-6Id"/>
+                                            </constraints>
+                                            <state key="normal" title="Button"/>
+                                        </button>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <constraints>
+                                        <constraint firstItem="YOL-st-eQa" firstAttribute="trailing" secondItem="cDR-JN-eU1" secondAttribute="trailing" id="DmO-gG-cRw"/>
+                                        <constraint firstItem="PUc-dN-Phw" firstAttribute="top" secondItem="YOL-st-eQa" secondAttribute="bottom" constant="35" id="ETS-Av-uiQ"/>
+                                        <constraint firstAttribute="bottom" secondItem="PUc-dN-Phw" secondAttribute="bottom" constant="35" id="Ta0-55-AHz"/>
+                                        <constraint firstItem="YOL-st-eQa" firstAttribute="top" secondItem="cDR-JN-eU1" secondAttribute="bottom" constant="8" id="YpE-Pr-dNM"/>
+                                        <constraint firstItem="PUc-dN-Phw" firstAttribute="centerX" secondItem="yyJ-Ll-YBn" secondAttribute="centerX" id="b7K-Uy-0ch"/>
+                                        <constraint firstItem="cDR-JN-eU1" firstAttribute="centerX" secondItem="yyJ-Ll-YBn" secondAttribute="centerX" id="dKi-v6-7hG"/>
+                                        <constraint firstItem="YOL-st-eQa" firstAttribute="leading" secondItem="cDR-JN-eU1" secondAttribute="leading" id="wgy-WI-VFJ"/>
+                                        <constraint firstItem="cDR-JN-eU1" firstAttribute="top" secondItem="yyJ-Ll-YBn" secondAttribute="top" id="yL1-YO-uf1"/>
+                                    </constraints>
+                                </view>
                             </subviews>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
@@ -203,13 +243,16 @@
                                 <constraint firstItem="3II-Dh-boX" firstAttribute="top" secondItem="GyX-7g-GR4" secondAttribute="bottom" constant="35" id="7Op-b9-4xk"/>
                                 <constraint firstItem="Bfp-bm-SyU" firstAttribute="leading" secondItem="Fum-tb-F1z" secondAttribute="leading" id="9kR-sO-8fY"/>
                                 <constraint firstItem="Bfp-bm-SyU" firstAttribute="trailing" secondItem="Fum-tb-F1z" secondAttribute="trailing" id="AVe-ce-q00"/>
+                                <constraint firstItem="yyJ-Ll-YBn" firstAttribute="top" secondItem="Bfp-bm-SyU" secondAttribute="bottom" constant="35" id="L7C-Hf-Bn0"/>
                                 <constraint firstItem="Bfp-bm-SyU" firstAttribute="top" secondItem="Fum-tb-F1z" secondAttribute="bottom" constant="35" id="M5Z-y0-kMP"/>
                                 <constraint firstAttribute="trailing" secondItem="GyX-7g-GR4" secondAttribute="trailing" id="MA5-g7-aHT"/>
                                 <constraint firstItem="3II-Dh-boX" firstAttribute="leading" secondItem="61L-g5-uCP" secondAttribute="leading" constant="40" id="MYc-Wp-ojW"/>
+                                <constraint firstAttribute="trailing" secondItem="yyJ-Ll-YBn" secondAttribute="trailing" constant="40" id="NUc-MB-7YY"/>
                                 <constraint firstAttribute="trailing" secondItem="3II-Dh-boX" secondAttribute="trailing" constant="40" id="Oos-bO-Hhk"/>
+                                <constraint firstItem="yyJ-Ll-YBn" firstAttribute="leading" secondItem="61L-g5-uCP" secondAttribute="leading" constant="40" id="RS6-wQ-KMK"/>
+                                <constraint firstAttribute="bottom" secondItem="yyJ-Ll-YBn" secondAttribute="bottom" id="SEn-Sv-Ofj"/>
                                 <constraint firstItem="Fum-tb-F1z" firstAttribute="leading" secondItem="61L-g5-uCP" secondAttribute="leading" constant="40" id="dR2-zb-M8a"/>
                                 <constraint firstAttribute="trailing" secondItem="Fum-tb-F1z" secondAttribute="trailing" constant="40" id="enF-eZ-CWa"/>
-                                <constraint firstAttribute="bottom" secondItem="Bfp-bm-SyU" secondAttribute="bottom" id="j30-PN-5VA"/>
                                 <constraint firstItem="Fum-tb-F1z" firstAttribute="top" secondItem="3II-Dh-boX" secondAttribute="bottom" constant="35" id="rXc-gh-BBH"/>
                                 <constraint firstItem="GyX-7g-GR4" firstAttribute="leading" secondItem="61L-g5-uCP" secondAttribute="leading" id="zBR-Qt-GI4"/>
                             </constraints>
